--- a/JustJava/app/src/main/res/values/strings.xml
+++ b/JustJava/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Just Java</string>
     <string name="minus">-</string>
-    <string name="next">Next</string>
+    <string name="order">Order</string>
     <string name="plus">+</string>
     <string name="price">Price</string>
     <string name="quantity">Quantity</string>
