--- a/CourtCounter/app/src/main/res/values/strings.xml
+++ b/CourtCounter/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Court Counter</string>
     <string name="team_name">Team A</string>
+    <string name="zero">0</string>
     <string name="three_points">+3 Points</string>
     <string name="two_points">+2 Points</string>
     <string name="free_throw">Free Throw</string>
